Fixed spacing, removed gray background and border from bottom section

--- a/04week/welcome-to-our-site/css/style.css
+++ b/04week/welcome-to-our-site/css/style.css
@@ -25,6 +25,8 @@ ul > li> p {
 .welcomeblock p {
   color:white;
   font-size: 48px;
+  margin-right: 40px;
+  margin-left: 40px;
 }
 
 .titleblock {
@@ -37,7 +39,14 @@ ul > li> p {
 }
 
 .container {
-  padding-top: 30px;
+  padding-top: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.container p {
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .title {
@@ -62,15 +71,13 @@ ul > li> p {
 }
 
 .ulclass {
-  background-color:gray;
-  border: 1px white solid;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
 }
 
-@media (max-width: 300px) { 
+@media (max-width: 500px) { 
   /* change background color of upper section blue when less than 500 pixels */
   .welcomeblock {
     background-color: #33a8dd;
@@ -82,5 +89,6 @@ ul > li> p {
     background-color: #f7f5f6;
     flex-direction: column;
     height: 100%;
+    color: black;
   }
 }
